--- a/ImputationCompared.Rmd
+++ b/ImputationCompared.Rmd
@@ -419,6 +419,79 @@ rm(ioa_interp_50)
 rm(mean_ioa_interp_50)
 
 ```
+Method = {forecast}na.interp 
+Gap = 100
+```{r}
+mad_interp_100 = c()
+fractional_bias_interp_100 = c()
+rmse_interp_100 = c()
+ioa_interp_100 = c()
+for (i in seed_points) { #runs once for each seed point, i.e., a total of 100 times where i is the seed point
+  series_new = series
+  #print("i loop")
+  for (j in 0:99) { #runs 100 times for every i loop iteration to introduce a gap of 100 starting from a seed point
+    series_new$glucoseValue[i+j] = NA
+    #print("j loop")
+  }
+  #series_new now has a gap of 50 starting from the seed point, so now we interpolate and get the error for the iteration
+  series_new$glucoseValue = na.interp(series_new$glucoseValue)
+  
+  #calculating mean absolute difference
+  temp1 = mad(series_new$glucoseValue)
+  mad_interp_100 = c(mad_interp_100,temp1)
+  
+  #calculating fractional bias
+  temp2 = compute.fb(series_new$glucoseValue,series$glucoseValue)
+  fractional_bias_interp_100 = c(fractional_bias_interp_100, temp2)
+  
+  #calculating RMSE
+  temp3 = compute.rmse(series_new$glucoseValue,series$glucoseValue)
+  rmse_interp_100 = c(rmse_interp_100,temp3)
+  
+  #calculatind IOA
+  x = data.frame("real" = series$glucoseValue, 'imputed' = series_new$glucoseValue)
+  temp4 = modStats(x,mod = "imputed",obs = "real", statistic = c("IOA"))
+  ioa_interp_100 = c(ioa_interp_100, temp4$IOA)
+  
+}
+
+
+
+mean_fractional_bias_interp_100 = mean(fractional_bias_interp_100)
+cat("Mean Fractional Bias for na.interp method with Gap Value of 100 is ",mean_fractional_bias_interp_100, "thats is, ",mean_fractional_bias_interp_100*100,"%\n\n")
+
+mean_rmse_interp_100 = mean(rmse_interp_100)
+cat("Mean RMSE for na.interp method with Gap Value of 100 is ",mean_rmse_interp_100, "thats is, ",mean_rmse_interp_100*100,"%\n\n")
+
+mean_ioa_interp_100 = mean(ioa_interp_100)
+cat("Mean IOA for na.interp method with Gap Value of 100 is ",mean_ioa_interp_100, "thats is, ",mean_ioa_interp_100*100,"%\n\n")
+
+mean_mad_interp_100 = mean(mad_interp_100)
+cat("Mean MAD for na.interp method with Gap Value of 100 is ",mean_mad_interp_100,"\n\n")
+
+mad_interp = c(mad_interp,mean_mad_interp_100)
+frac_bias_interp = c(frac_bias_interp,mean_fractional_bias_interp_100)
+rmse_interp = c(rmse_interp,mean_rmse_interp_100)
+ioa_interp = c(ioa_interp, mean_ioa_interp_100)
+
+rm(temp1)
+rm(temp2)
+rm(temp3)
+rm(temp4)
+rm(x)
+rm(i)
+rm(j)
+rm(mad_interp_100)
+rm(mean_mad_interp_100)
+rm(fractional_bias_interp_100)
+rm(mean_fractional_bias_interp_100)
+rm(rmse_interp_100)
+rm(mean_rmse_interp_100)
+rm(ioa_interp_100)
+rm(mean_ioa_interp_100)
+
+```
+
 
 na.interp final values
 ```{r}
@@ -812,6 +885,82 @@ rm(mean_ioa_approx_50)
 ```
 
 
+Method = {zoo}na.approx
+Gap = 100
+```{r}
+mad_approx_100 = c()
+fractional_bias_approx_100 = c()
+rmse_approx_100 = c()
+ioa_approx_100 = c()
+for (i in seed_points) { #runs once for each seed point, i.e., a total of 100 times where i is the seed point
+  series_new = series
+  #print("i loop")
+  for (j in 0:99) { #runs 100 times for every i loop iteration to introduce a gap of 100 starting from a seed point
+    series_new$glucoseValue[i+j] = NA
+    #print("j loop")
+  }
+  #series_new now has a gap of 10 starting from the seed point, so now we approximate and get the error for the iteration
+  series_new$glucoseValue = na.approx(series_new$glucoseValue)
+  
+  #calculating mean absolute difference
+  temp1 = mad(series_new$glucoseValue)
+  mad_approx_100 = c(mad_approx_100,temp1)
+  
+  #calculating fractional bias
+  temp2 = compute.fb(series_new$glucoseValue,series$glucoseValue)
+  fractional_bias_approx_100 = c(fractional_bias_approx_100, temp2)
+  
+  #calculating RMSE
+  temp3 = compute.rmse(series_new$glucoseValue,series$glucoseValue)
+  rmse_approx_100 = c(rmse_approx_100,temp3)
+  
+  #calculatind IOA
+  x = data.frame("real" = series$glucoseValue, 'imputed' = series_new$glucoseValue)
+  temp4 = modStats(x,mod = "imputed",obs = "real", statistic = c("IOA"))
+  ioa_approx_100 = c(ioa_approx_100, temp4$IOA)
+  
+  
+}
+
+
+mean_fractional_bias_approx_100 = mean(fractional_bias_approx_100)
+cat("Mean Fractional Bias for na.approx method with Gap Value of 100 is ",mean_fractional_bias_approx_100, "thats is, ",mean_fractional_bias_approx_100*100,"%\n\n")
+
+mean_rmse_approx_100 = mean(rmse_approx_100)
+cat("Mean RMSE for na.approx method with Gap Value of 100 is ",mean_rmse_approx_100, "thats is, ",mean_rmse_approx_100*100,"%\n\n")
+
+mean_ioa_approx_100 = mean(ioa_approx_100)
+cat("Mean IOA for na.approx method with Gap Value of 100 is ",mean_ioa_approx_100, "thats is, ",mean_ioa_approx_100*100,"%\n\n")
+
+mean_mad_approx_100 = mean(mad_approx_100)
+cat("Mean MAD for na.approx method with Gap Value of 100 is ",mean_mad_approx_100,"\n\n")
+
+mad_approx = c(mad_approx,mean_mad_approx_100)
+frac_bias_approx = c(frac_bias_approx,mean_fractional_bias_approx_100)
+rmse_approx = c(rmse_approx,mean_rmse_approx_100)
+ioa_approx = c(ioa_approx, mean_ioa_approx_100)
+
+rm(temp1)
+rm(temp2)
+rm(temp3)
+rm(temp4)
+rm(x)
+rm(i)
+rm(j)
+rm(mad_approx_100)
+rm(mean_mad_approx_100)
+rm(fractional_bias_approx_100)
+rm(mean_fractional_bias_approx_100)
+rm(rmse_approx_100)
+rm(mean_rmse_approx_100)
+rm(ioa_approx_100)
+rm(mean_ioa_approx_100)
+
+
+```
+
+
+
 na.approx final values
 ```{r}
 mad_approx
@@ -1199,6 +1348,80 @@ rm(mean_ioa_spline_50)
 ```
 
 
+Method = {zoo}na.spline
+Gap = 100
+```{r}
+mad_spline_100 = c()
+fractional_bias_spline_100 = c()
+rmse_spline_100 = c()
+ioa_spline_100 = c()
+for (i in seed_points) { #runs once for each seed point, i.e., a total of 100 times where i is the seed point
+  series_new = series
+  #print("i loop")
+  for (j in 0:99) { #runs 100 times for every i loop iteration to introduce a gap of 100 starting from a seed point
+    series_new$glucoseValue[i+j] = NA
+    #print("j loop")
+  }
+  #series_new now has a gap of 10 starting from the seed point, so now we spline and get the error for the iteration
+  series_new$glucoseValue = na.spline(series_new$glucoseValue)
+  
+  #calculating mean absolute difference
+  temp1 = mad(series_new$glucoseValue)
+  mad_spline_100 = c(mad_spline_100,temp1)
+  
+  #calculating fractional bias
+  temp2 = compute.fb(series_new$glucoseValue,series$glucoseValue)
+  fractional_bias_spline_100 = c(fractional_bias_spline_100, temp2)
+  
+  #calculating RMSE
+  temp3 = compute.rmse(series_new$glucoseValue,series$glucoseValue)
+  rmse_spline_100 = c(rmse_spline_100,temp3)
+  
+  #calculatind IOA
+  x = data.frame("real" = series$glucoseValue, 'imputed' = series_new$glucoseValue)
+  temp4 = modStats(x,mod = "imputed", obs = "real", statistic = c("IOA"))
+  ioa_spline_100 = c(ioa_spline_100, temp4$IOA)
+  
+  
+}
+
+
+mean_fractional_bias_spline_100 = mean(fractional_bias_spline_100)
+cat("Mean Fractional Bias for na.spline method with Gap Value of 100 is ",mean_fractional_bias_spline_100, "thats is, ",mean_fractional_bias_spline_100*100,"%\n\n")
+
+mean_rmse_spline_100 = mean(rmse_spline_100)
+cat("Mean RMSE for na.spline method with Gap Value of 100 is ",mean_rmse_spline_100, "thats is, ",mean_rmse_spline_100*100,"%\n\n")
+
+mean_ioa_spline_100 = mean(ioa_spline_100)
+cat("Mean IOA for na.spline method with Gap Value of 100 is ",mean_ioa_spline_100, "thats is, ",mean_ioa_spline_100*100,"%\n\n")
+
+mean_mad_spline_100 = mean(mad_spline_100)
+cat("Mean MAD for na.approx method with Gap Value of 100 is ",mean_mad_spline_100,"\n\n")
+
+mad_spline = c(mad_spline,mean_mad_spline_100)
+frac_bias_spline = c(frac_bias_spline,mean_fractional_bias_spline_100)
+rmse_spline = c(rmse_spline,mean_rmse_spline_100)
+ioa_spline = c(ioa_spline, mean_ioa_spline_100)
+
+rm(temp1)
+rm(temp2)
+rm(temp3)
+rm(temp4)
+rm(x)
+rm(i)
+rm(j)
+rm(mad_spline_100)
+rm(mean_mad_spline_100)
+rm(fractional_bias_spline_100)
+rm(mean_fractional_bias_spline_100)
+rm(rmse_spline_100)
+rm(mean_rmse_spline_100)
+rm(ioa_spline_100)
+rm(mean_ioa_spline_100)
+
+```
+
+
 na.spline error lists for plotting
 ```{r}
 mad_spline
@@ -1210,9 +1433,9 @@ ioa_spline
 
 Compating fractional biases for all three methods
 ```{r}
-l=c('5','10','20','25','50')
-plot(NULL,NULL, xaxt='n', xlim = c(1,5), ylim = c(0,0.002),xlab = 'Gap Size', ylab = 'Fractional Bias', main = 'Comparing Fractional Bias')
-axis(1,at=seq(1:5),labels = l)
+l=c('5','10','20','25','50','100')
+plot(NULL,NULL, xaxt='n', xlim = c(1,6), ylim = c(0,0.009),xlab = 'Gap Size', ylab = 'Fractional Bias', main = 'Comparing Fractional Bias')
+axis(1,at=seq(1:6),labels = l)
 legend("topleft", c('na.approx', 'na.interp', 'na.spline'), col = c('red','blue','green'),lwd=2,cex=.75)
 lines(frac_bias_approx, col = 'red',lwd=4)
 lines(frac_bias_interp, col = 'blue',lwd=2)
@@ -1220,11 +1443,10 @@ lines(frac_bias_spline, col = 'green',lwd=2)
 ```
 
 
-Compating mean absolute error for all three methods
+Compating mean absolute difference for all three methods
 ```{r}
-l=c('5','10','20','25','50')
-plot(NULL,NULL, xaxt='n', xlim = c(1,5), ylim = c(2.775,2.80),xlab = 'Gap Size', ylab = 'Mean Absolute Error', main = 'Comparing Mean Absolute Error')
-axis(1,at=seq(1:5),labels = l)
+plot(NULL,NULL, xaxt='n', xlim = c(1,6), ylim = c(2.72,2.82),xlab = 'Gap Size', ylab = 'Mean Absolute Difference', main = 'Comparing Mean Absolute Difference')
+axis(1,at=seq(1:6),labels = l)
 legend("topleft", c('na.approx', 'na.interp', 'na.spline'), col = c('red','blue','green'),lwd=2,cex=.75)
 lines(mad_approx, col = 'red',lwd=4)
 lines(mad_interp, col = 'blue',lwd=2)
@@ -1234,9 +1456,9 @@ lines(mad_spline, col = 'green',lwd=2)
 
 Compating RMSE for all three methods
 ```{r}
-l=c('5','10','20','25','50')
-plot(NULL,NULL, xaxt='n', xlim = c(1,5), ylim = c(0,0.15),xlab = 'Gap Size', ylab = 'RMSE', main = 'Comparing RMSE')
-axis(1,at=seq(1:5),labels = l)
+
+plot(NULL,NULL, xaxt='n', xlim = c(1,6), ylim = c(0,0.4),xlab = 'Gap Size', ylab = 'RMSE', main = 'Comparing RMSE')
+axis(1,at=seq(1:6),labels = l)
 legend("topleft", c('na.approx', 'na.interp', 'na.spline'), col = c('red','blue','green'),lwd=2,cex=.75)
 lines(rmse_approx, col = 'red',lwd=4)
 lines(rmse_interp, col = 'blue',lwd=2)
@@ -1246,9 +1468,8 @@ lines(rmse_spline, col = 'green',lwd=2)
 
 Compating index of agreement for all three methods
 ```{r}
-l=c('5','10','20','25','50')
-plot(NULL,NULL, xaxt='n', xlim = c(1,5), ylim = c(0.995,1),xlab = 'Gap Size', ylab = 'Index of Agreement', main = 'Comparing Index of Agreement')
-axis(1,at=seq(1:5),labels = l)
+plot(NULL,NULL, xaxt='n', xlim = c(1,6), ylim = c(0.982,1),xlab = 'Gap Size', ylab = 'Index of Agreement', main = 'Comparing Index of Agreement')
+axis(1,at=seq(1:6),labels = l)
 legend("topright", c('na.approx', 'na.interp', 'na.spline'), col = c('red','blue','green'),lwd=2,cex=.75)
 lines(ioa_approx, col = 'red',lwd=4)
 lines(ioa_interp, col = 'blue',lwd=2)
