--- a/cgm-DTW.Rmd
+++ b/cgm-DTW.Rmd
@@ -4,18 +4,18 @@ output: html_notebook
 ---
 ========= loading data =========
 ```{r}
-m1 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID01.csv')
-m2 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID02.csv')
-m3 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID03.csv')
-m4 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID11.csv')
-m5 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID12.csv')
-m6 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID13.csv')
-m7 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID21.csv')
-m8 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID22.csv')
-m9 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID23.csv')
-m10 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID29.csv')
-m11 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID30.csv')
-m12 = read.csv('~/Desktop/NCSA/CGManalyzer-datasets/ID31.csv')
+m1 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID01.csv')
+m2 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID02.csv')
+m3 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID03.csv')
+m4 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID11.csv')
+m5 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID12.csv')
+m6 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID13.csv')
+m7 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID21.csv')
+m8 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID22.csv')
+m9 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID23.csv')
+m10 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID29.csv')
+m11 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID30.csv')
+m12 = read.csv('~/Desktop/NCSA_genomics/CGManalyzer-datasets/ID31.csv')
 
 training_frame = rbind.data.frame(
                             m1$glucoseValue,
@@ -77,8 +77,8 @@ predict(clust.hier_raw,newdata=unlist(m9$glucoseValue))
 predict(clust.hier_raw,newdata=unlist(m12$glucoseValue))
 ```
 ```{r}
-index_hier_raw=arandi(l_hier,m_hier)
-unadjusted_hier_raw=arandi(l_hier,m_hier,adjust=FALSE)
+index_hier_raw=mclust::adjustedRandIndex(l_hier,m_hier)
+unadjusted_hier_raw=mclust::adjustedRandIndex(l_hier,m_hier)
 index_hier_raw
 unadjusted_hier_raw
 ```
@@ -118,8 +118,8 @@ predict(clust.par_raw,newdata=unlist(m12$glucoseValue))
 ```
 
 ```{r}
-index_par_raw=arandi(l_par,m_par)
-unadjusted_par_raw=arandi(l_par,m_par,adjust=FALSE)
+index_par_raw=mclust::adjustedRandIndex(l_par,m_par)
+unadjusted_par_raw=mclust::adjustedRandIndex(l_par,m_par)
 index_par_raw
 unadjusted_par_raw
 ```
@@ -141,8 +141,8 @@ m_kmeans_raw <- c(1,1,1,2,2,2,3,3,3,4,4,4)
 
 ```{r}
 
-index_kmeans_raw = arandi(l_kmeans_raw,m_kmeans_raw)
-unadjusted_kmeans_raw = arandi(l_kmeans_raw,m_kmeans_raw,adjust = TRUE)
+index_kmeans_raw = mclust::adjustedRandIndex(l_kmeans_raw,m_kmeans_raw)
+unadjusted_kmeans_raw = mclust::adjustedRandIndex(l_kmeans_raw,m_kmeans_raw)
 index_kmeans_raw
 unadjusted_kmeans_raw
 ```
@@ -212,8 +212,8 @@ predict(clust.hier_scaled,newdata=unlist(linearScaling(m9$glucoseValue)))
 predict(clust.hier_scaled,newdata=unlist(linearScaling(m12$glucoseValue)))
 ```
 ```{r}
-index_hier_scaled=arandi(l_hier,m_hier)
-unadjusted_hier_scaled=arandi(l_hier,m_hier,adjust=FALSE)
+index_hier_scaled=mclust::adjustedRandIndex(l_hier,m_hier)
+unadjusted_hier_scaled=mclust::adjustedRandIndex(l_hier,m_hier)
 index_hier_scaled
 unadjusted_hier_scaled
 ```
@@ -254,8 +254,8 @@ predict(clust.par_raw,newdata=unlist(linearScaling(m12$glucoseValue)))
 ```
 
 ```{r}
-index_par_scaled=arandi(l_par,m_par)
-unadjusted_par_scaled=arandi(l_par,m_par,adjust=FALSE)
+index_par_scaled=mclust::adjustedRandIndex(l_par,m_par)
+unadjusted_par_scaled=mclust::adjustedRandIndex(l_par,m_par)
 index_par_scaled
 unadjusted_par_scaled
 ```
@@ -271,8 +271,8 @@ m_kmeans_scaled <- c(3,3,3,2,2,2,4,4,4,1,1,1)
 
 ```{r}
 
-index_kmeans_scaled = arandi(l_kmeans_scaled,m_kmeans_scaled)
-unadjusted_kmeans_scaled = arandi(l_kmeans_scaled,m_kmeans_scaled,adjust = TRUE)
+index_kmeans_scaled = mclust::adjustedRandIndex(l_kmeans_scaled,m_kmeans_scaled)
+unadjusted_kmeans_scaled = mclust::adjustedRandIndex(l_kmeans_scaled,m_kmeans_scaled)
 index_kmeans_scaled
 unadjusted_kmeans_scaled
 ```
@@ -337,8 +337,8 @@ predict(clust.hier_zscore,newdata=unlist(zscore(m9$glucoseValue)))
 predict(clust.hier_zscore,newdata=unlist(zscore(m12$glucoseValue)))
 ```
 ```{r}
-index_hier_zscore=arandi(l_hier,m_hier)
-unadjusted_hier_zscore=arandi(l_hier,m_hier,adjust=FALSE)
+index_hier_zscore=mclust::adjustedRandIndex(l_hier,m_hier)
+unadjusted_hier_zscore=mclust::adjustedRandIndex(l_hier,m_hier)
 index_hier_zscore
 unadjusted_hier_zscore
 ```
@@ -378,8 +378,8 @@ predict(clust.par_zscore,newdata=unlist(zscore(m12$glucoseValue)))
 ```
 
 ```{r}
-index_par_zscore=arandi(l_par,m_par)
-unadjusted_par_zscore=arandi(l_par,m_par,adjust=FALSE)
+index_par_zscore=mclust::adjustedRandIndex(l_par,m_par)
+unadjusted_par_zscore=mclust::adjustedRandIndex(l_par,m_par)
 index_par_zscore
 unadjusted_par_zscore
 ```
@@ -394,8 +394,8 @@ m_kmeans_zscore <- c(2,2,2,3,3,3,4,4,4,1,1,1)
 ```
 
 ```{r}
-index_kmeans_zscore = arandi(l_kmeans_scaled,m_kmeans_scaled)
-unadjusted_kmeans_zscore = arandi(l_kmeans_scaled,m_kmeans_scaled,adjust = TRUE)
+index_kmeans_zscore = mclust::adjustedRandIndex(l_kmeans_scaled,m_kmeans_scaled)
+unadjusted_kmeans_zscore = mclust::adjustedRandIndex(l_kmeans_scaled,m_kmeans_scaled)
 index_kmeans_zscore
 unadjusted_kmeans_zscore
 ```
@@ -411,7 +411,7 @@ t_types = c('Raw', 'Min-Max Scaling','Z-Score Normalization')
 ```{r}
 index_all = c(index_hier_raw,index_hier_scaled,index_hier_zscore, index_par_raw, index_par_scaled, index_par_zscore, index_kmeans_raw, index_kmeans_scaled, index_kmeans_zscore)
 
-plot(index_all,xaxt='n',type='h', col = colors, xlab="Clustering Methods", ylab="Adjusted Random Index", main='Adjusted Random Index: Hierarchical, Partitional & K-Means Clustering', lwd=4)
+plot(index_all,xaxt='n',type='h', col = colors, xlab="Clustering Methods", ylab="ARANDI Measure", main='Adjusted Random Index: Hierarchical, Partitional & K-Means Clustering', lwd=4)
 axis(1, at=seq(2,9,by=3), labels=c_types[1:3])
 legend("topright",t_types, col = colors, title = 'Transformation Types', lwd=2,cex=.75)
 ```
